# solana--rust-exercises

./: .gitignore  README.md
apps/amm/anchor/exercise/: Anchor.toml
apps/amm/native/: README.md
apps/amm/native/exercise/examples/: demo.rs
apps/amm/native/exercise/src/: lib.rs
apps/auction/anchor/exercise/: Anchor.toml  Cargo.toml  package.json
apps/auction/anchor/exercise/programs/auction/: Cargo.toml
apps/auction/anchor/exercise/programs/auction/src/: error.rs  lib.rs
apps/auction/anchor/exercise/programs/auction/src/instructions/: buy.rs  cancel.rs  init.rs  mod.rs
apps/auction/anchor/exercise/tests/: Cargo.toml
apps/auction/anchor/solution/tests/: Cargo.toml
apps/auction/native/exercise/: Cargo.toml
apps/auction/native/exercise/examples/: demo.rs
apps/auction/native/exercise/src/: state.rs
apps/auction/native/solution/: Cargo.toml
apps/cpi/anchor/: README.md
apps/cpi/anchor/exercise/: Anchor.toml
apps/ctf/auth/: README.md
apps/ctf/auth/solution/: Cargo.toml
apps/ctf/pda/: README.md
apps/ctf/pda/exercise/: Cargo.toml
apps/ctf/signer/: README.md
apps/hello/native/: README.md
apps/hello/native/exercise/: Cargo.toml
apps/hello/native/solution/: Cargo.toml
apps/oracle/anchor/exercise/: .gitignore  Anchor.toml  package-lock.json
apps/oracle/native/: README.md
apps/piggy/anchor/exercise/: Anchor.toml
apps/piggy/anchor/solution/: Anchor.toml
apps/piggy/native/: README.md
notes/: course_setup.md  eth-sol.excalidraw  install.md  program.excalidraw  wormhole-amm.excalidraw
wormhole/csamm/: CSAMM.sol
(+100 files in other folders)
