[workspace]
members = [
    "programs/*"
, "tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


getrandom = { version = "0.2", features = ["custom"] }

[workspace.dependencies]
constant_time_eq = "=0.3.1"
blake3 = "=1.5.4"
